# ifx

./: .gitignore  CMakeLists.txt  README.md  contribution_sparray.hpp  cs_alloc.hpp  ifx.cpp
doc/: index.md
docs/: index.md
docs/images/: ifx.graffle
